--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -50,6 +50,7 @@
 @import "hu-transition-duration";
 @import "hu-transition-property";
 @import "hu-transition-easing";
+@import "hu-truncate-text";
 @import "hu-vertical-align";
 @import "hu-visibility";
 @import "hu-white-space";
