Use hu-class-name function to handle class generation

--- a/src/classes/_hu-align-content.scss
+++ b/src/classes/_hu-align-content.scss
@@ -15,7 +15,7 @@ $hu-align-content-types: (
 ) !default;
 
 @each $type, $value in $hu-align-content-types {
-  $class-name: #{$hu-namespace}align-content-#{$type};
+  $class-name: hu-class-name(align-content-#{$type});
   $property: align-content;
   $value: if($value, $value, $type);
 
