--- a/src/classes/_hu-momentum-scrolling.scss
+++ b/src/classes/_hu-momentum-scrolling.scss
@@ -2,7 +2,7 @@ $hu-momentum-scrolling-modules: (base);
 
 // momentum-scrolling -> webkit-overflow-scrolling
 @if (index($hu-momentum-scrolling-modules, base)) {
-  $class-name: #{$hu-namespace}momentum-scrolling;
+  $class-name: hu-class-name(momentum-scrolling);
   $property: -webkit-overflow-scrolling;
   $value: touch;
   
