--- a/src/classes/_hu-height.scss
+++ b/src/classes/_hu-height.scss
@@ -8,7 +8,7 @@ $hu-height-types: (
 ) !default;
 
 @each $type, $value in $hu-height-types {
-  $class-name: #{$hu-namespace}height-#{$type};
+  $class-name: hu-class-name(height-#{$type});
   $property: height;
   $value: if($value, $value, $type);
 
