--- a/src/classes/_hu-min-width.scss
+++ b/src/classes/_hu-min-width.scss
@@ -8,7 +8,7 @@ $hu-min-width-types: (
 ) !default;
 
 @each $type, $value in $hu-min-width-types {
-  $class-name: #{$hu-namespace}min-width-#{$type};
+  $class-name: hu-class-name(min-width-#{$type});
   $property: min-width;
   $value: if($value, $value, $type);
 
