--- a/src/classes/_hu-overflow-y.scss
+++ b/src/classes/_hu-overflow-y.scss
@@ -3,7 +3,7 @@ $hu-overflow-y-modules: $hu-overflow-modules !default;
 $hu-overflow-y-types: $hu-overflow-types !default;
 
 @each $type, $value in $hu-overflow-y-types {
-  $class-name: #{$hu-namespace}overflow-y-#{$type};
+  $class-name: hu-class-name(overflow-y-#{$type});
   $property: overflow-y;
   $value: if($value, $value, $type);
 
