--- a/src/classes/_hu-truncate-text.scss
+++ b/src/classes/_hu-truncate-text.scss
@@ -14,7 +14,7 @@ $hu-truncate-text-types: (
 ) !default;
 
 @each $type, $properties in $hu-truncate-text-types {
-  $class-name: #{$hu-namespace}#{$type};
+  $class-name: hu-class-name(#{$type});
   
   @if (index($hu-truncate-text-modules, base)) {
     @include hu-base($class-name) {
