--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -26,6 +26,7 @@
 @import "hu-list-style";
 @import "hu-margin";
 @import "hu-max-height";
+@import "hu-max-width";
 @import "hu-min-width";
 @import "hu-momentum-scrolling";
 @import "hu-opacity";
