fix font families

--- a/src/classes/_hu-font-family.scss
+++ b/src/classes/_hu-font-family.scss
@@ -1,9 +1,9 @@
 $hu-font-family-modules: (base);
 
 $hu-font-family-types: (
-  mono: "Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace",
-  sans: "system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif",
-  serif: "Constantia, Lucida Bright, Lucidabright, Lucida Serif, Lucida, DejaVu Serif, Bitstream Vera Serif, Liberation Serif, Georgia, serif",
+  mono: (Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace),
+  sans: (system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif),
+  serif: (Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif),
 ) !default;
 
 @each $type, $value in $hu-font-family-types {
