--- a/src/functions/_index.scss
+++ b/src/functions/_index.scss
@@ -1,5 +1,9 @@
 @import "hu-class-name";
 @import "hu-em";
 @import "hu-get";
+@import "hu-log-error";
+@import "hu-rem";
+@import "hu-shade";
 @import "hu-string-replace";
 @import "hu-strip-unit";
+@import "hu-tint";
