--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import "functions/index";
 @import "mixins/index";
 @import "global-settings/index";
+@import "reset/index";
 @import "classes/index";
