--- a/src/classes/_hu-flex-direction.scss
+++ b/src/classes/_hu-flex-direction.scss
@@ -1,4 +1,4 @@
-$hu-flex-direction-modules: (base, responsive);
+$hu-flex-direction-modules: (base, responsive) !default;
 
 $hu-flex-direction-types: (
   column,
