--- a/src/classes/_hu-flex-shrink.scss
+++ b/src/classes/_hu-flex-shrink.scss
@@ -1,4 +1,4 @@
-$hu-flex-shrink-modules: (base, responsive);
+$hu-flex-shrink-modules: (base, responsive) !default;
 
 $hu-flex-shrink-types: $hu-flex-grow-types !default;
 
