--- a/src/classes/_hu-flex-wrap.scss
+++ b/src/classes/_hu-flex-wrap.scss
@@ -1,4 +1,4 @@
-$hu-flex-wrap-modules: (base, responsive);
+$hu-flex-wrap-modules: (base, responsive) !default;
 
 $hu-flex-wrap-types: (
   no-wrap: nowrap,
