--- a/src/classes/_hu-font-family.scss
+++ b/src/classes/_hu-font-family.scss
@@ -1,4 +1,4 @@
-$hu-font-family-modules: (base);
+$hu-font-family-modules: (base) !default;
 
 $hu-font-family-types: (
   mono: (Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace),
