--- a/src/classes/_hu-font-size.scss
+++ b/src/classes/_hu-font-size.scss
@@ -1,4 +1,4 @@
-$hu-font-size-modules: (base, responsive);
+$hu-font-size-modules: (base, responsive) !default;
 
 $hu-font-size-types: (
   100: 10px,
