--- a/src/classes/_hu-justify-content.scss
+++ b/src/classes/_hu-justify-content.scss
@@ -1,4 +1,4 @@
-$hu-justify-content-modules: (base, responsive);
+$hu-justify-content-modules: (base, responsive) !default;
 
 $hu-justify-content-types: (
   center,
