--- a/src/classes/_hu-justify-items.scss
+++ b/src/classes/_hu-justify-items.scss
@@ -1,4 +1,4 @@
-$hu-justify-items-modules: (base, responsive);
+$hu-justify-items-modules: (base, responsive) !default;
 
 $hu-justify-items-types: (
   auto,
