--- a/src/classes/_hu-line-height.scss
+++ b/src/classes/_hu-line-height.scss
@@ -1,4 +1,4 @@
-$hu-line-height-modules: (base, responsive);
+$hu-line-height-modules: (base, responsive) !default;
 
 $hu-line-height-types: (
   0: 0,
