--- a/src/classes/_hu-max-height.scss
+++ b/src/classes/_hu-max-height.scss
@@ -1,4 +1,4 @@
-$hu-max-height-modules: (base, print);
+$hu-max-height-modules: (base, print) !default;
 
 $hu-max-height-types: $hu-height-types !default;
 
