--- a/src/classes/_hu-overflow.scss
+++ b/src/classes/_hu-overflow.scss
@@ -1,4 +1,4 @@
-$hu-overflow-modules: (base, print, responsive);
+$hu-overflow-modules: (base, print, responsive) !default;
 
 $hu-overflow-types: (
   auto,
