--- a/src/classes/_hu-pointer-events.scss
+++ b/src/classes/_hu-pointer-events.scss
@@ -1,4 +1,4 @@
-$hu-pointer-events-modules: (base, group-state, state);
+$hu-pointer-events-modules: (base, group-state, state) !default;
 
 $hu-pointer-events-types: (
   auto,
