--- a/src/classes/_hu-text-align.scss
+++ b/src/classes/_hu-text-align.scss
@@ -1,4 +1,4 @@
-$hu-text-align-modules: (base, responsive);
+$hu-text-align-modules: (base, responsive) !default;
 
 $hu-text-align-types: (
   center,
