--- a/src/classes/_hu-text-decoration.scss
+++ b/src/classes/_hu-text-decoration.scss
@@ -1,4 +1,4 @@
-$hu-text-decoration-modules: (base);
+$hu-text-decoration-modules: (base) !default;
 
 $hu-text-decoration-types: (
   line-through,
