--- a/src/classes/_hu-transition-duration.scss
+++ b/src/classes/_hu-transition-duration.scss
@@ -1,4 +1,4 @@
-$hu-transition-duration-modules: (base, group-hover, group-state, state);
+$hu-transition-duration-modules: (base, group-hover, group-state, state) !default;
 
 $hu-transition-duration-types: (
   0: 0s,
