--- a/src/classes/_hu-width.scss
+++ b/src/classes/_hu-width.scss
@@ -1,4 +1,4 @@
-$hu-width-modules: (base, print, responsive);
+$hu-width-modules: (base, print, responsive) !default;
 
 $hu-width-types: (
   0: 0,
