--- a/src/classes/_hu-transition-delay.scss
+++ b/src/classes/_hu-transition-delay.scss
@@ -1,4 +1,4 @@
-$hu-transition-delay-modules: (base, group-hover, group-state, state);
+$hu-transition-delay-modules: (base, group-hover, group-state, state) !default;
 
 $hu-transition-delay-types: (
   0: 0s,
