--- a/src/classes/_hu-transition-easing.scss
+++ b/src/classes/_hu-transition-easing.scss
@@ -1,4 +1,4 @@
-$hu-transition-easing-modules: (base, group-hover, group-state, state);
+$hu-transition-easing-modules: (base, group-hover, group-state, state) !default;
 
 $hu-transition-easing-types: (
   ease: ease,
