--- a/src/classes/_hu-transition-property.scss
+++ b/src/classes/_hu-transition-property.scss
@@ -1,4 +1,4 @@
-$hu-transition-property-modules: (base, group-hover, group-state, state);
+$hu-transition-property-modules: (base, group-hover, group-state, state) !default;
 
 $hu-transition-property-types: (
   all,
