--- a/src/mixins/_index.scss
+++ b/src/mixins/_index.scss
@@ -3,6 +3,7 @@
 @import "hu-group-hover";
 @import "hu-group-state";
 @import "hu-hocus";
+@import "hu-parent";
 @import "hu-print";
 @import "hu-pseudo";
 @import "hu-responsive-group-state";
