Make parent useful, and support special characters throughout

--- a/src/functions/_hu-class-name.scss
+++ b/src/functions/_hu-class-name.scss
@@ -5,5 +5,7 @@
     $class-name: hu-string-replace($class-name, #{$replacement}-#{$replacement}, $replacement);
   }
 
+  $class-name: hu-escape-class-name($class-name);
+
   @return #{$hu-namespace}#{$class-name};
 }
