--- a/src/global-settings/_index.scss
+++ b/src/global-settings/_index.scss
@@ -1,4 +1,5 @@
 @import "hu-breakpoints";
 @import "hu-colors";
+@import "hu-escape-class-name-types";
 @import "hu-namespace";
 @import "hu-states";
