Added visually-hidden and added all modules to momentum-scrolling

--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -54,6 +54,7 @@
 @import "hu-truncate-text";
 @import "hu-vertical-align";
 @import "hu-visibility";
+@import "hu-visually-hidden";
 @import "hu-white-space";
 @import "hu-width";
 @import "hu-z-index";
