--- a/src/classes/_hu-momentum-scrolling.scss
+++ b/src/classes/_hu-momentum-scrolling.scss
@@ -5,8 +5,62 @@ $hu-momentum-scrolling-modules: (base) !default;
   $class-name: hu-class-name(momentum-scrolling);
   $property: -webkit-overflow-scrolling;
   $value: touch;
-  
-  @include hu-base($class-name) {
-    #{$property}: $value;
+
+  @if (index($hu-momentum-scrolling-modules, base)) {
+    @include hu-base($class-name) {
+      #{$property}: $value;
+    }
+  }
+
+  @if (index($hu-momentum-scrolling-modules, state)) {
+    @include hu-state($class-name) {
+      #{$property}: $value;
+    }
+  }
+
+  @if (index($hu-momentum-scrolling-modules, hocus)) {
+    @include hu-hocus($class-name) {
+      #{$property}: $value;
+    }
+  }
+
+  @if (index($hu-momentum-scrolling-modules, group-state)) {
+    @include hu-group-state($class-name) {
+      #{$property}: $value;
+    }
+  }
+
+  @if (index($hu-momentum-scrolling-modules, group-hover)) {
+    @include hu-group-hover($class-name) {
+      #{$property}: $value;
+    }
+  }
+
+  @if (index($hu-momentum-scrolling-modules, responsive)) {
+    @include hu-responsive($class-name) {
+      #{$property}: $value;
+    }
+
+    @if (index($hu-momentum-scrolling-modules, state)) {
+      @include hu-responsive-state($class-name) {
+        @each $property, $value in $properties {
+          #{$property}: $value;
+        }
+      }
+    }
+
+    @if (index($hu-momentum-scrolling-modules, group-state)) {
+      @include hu-responsive-group-state($class-name) {
+        @each $property, $value in $properties {
+          #{$property}: $value;
+        }
+      }
+    }
+  }
+
+  @if (index($hu-momentum-scrolling-modules, staprint)) {
+    @include hu-print($class-name) {
+      #{$property}: $value;
+    }
   }
 }
