--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -41,6 +41,7 @@
 @import "hu-position";
 @import "hu-scroll-behavior";
 @import "hu-svg-fill-color";
+@import "hu-svg-fill-rule";
 @import "hu-svg-stroke-color";
 @import "hu-table-border";
 @import "hu-table-layout";
