--- a/src/global-settings/_hu-colors.scss
+++ b/src/global-settings/_hu-colors.scss
@@ -6,7 +6,8 @@ $hu-colors: (
     300: #f1f4f8,
     400: #f1f1f1,
     500: #e0e1e2,
-    800: #aeaeae,
+    700: #aeaeae,
+    800: #626262,
     900: #495b60,
     1000: #000,
   ),
