--- a/src/functions/_index.scss
+++ b/src/functions/_index.scss
@@ -1,9 +1,11 @@
 @import "hu-class-name";
 @import "hu-escape-class-name";
 @import "hu-em";
+@import "hu-format-modules";
 @import "hu-get";
 @import "hu-log-error";
 @import "hu-rem";
+@import "hu-remove-list-duplicates";
 @import "hu-shade";
 @import "hu-string-replace";
 @import "hu-strip-unit";
